--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 networks:
   sync-network:
 
@@ -12,8 +11,8 @@ services:
     networks:
       - sync-network
     environment:
-      POSTGRES_DB: mnist_db
-      POSTGRES_USER: nike_test
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: test
     ports:
       - "5432:5432"
@@ -22,11 +21,16 @@ services:
 
   app:
     build:
-      context: ./frontend_streamlit
+      context: .
       dockerfile: app/Dockerfile
     container_name: mnistStreamlitApp
     networks:
       - sync-network
+    environment:
+      POSTGRES_HOST: database
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: test
     ports:
       - "8501:8501"
     depends_on:
